--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,7 @@ jobs:
                     profile: minimal
                     components: clippy, rustfmt
                     override: true
+
             - name: Run clippy
+              working-directory: /Planar_data_classification_with_one_hidden_layer_RUST/one_hidden_layer_nn
               run: cargo clippy --quiet
